--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "typings": "dist/types",
   "scripts": {
     "prepublishOnly": "pnpm run build",
-    "dev": "concurrently \"tsc -p ./tsconfig.declarations.json -w\" \"vite build --config ./vite.config.watch.ts\" \"vite\"",
-    "build": "tsc -p tsconfig.declarations.json && vite build",
+    "dev": "concurrently \"tsc -p tsconfig.dev.json -w\" \"vite build --config ./vite.config.watch.ts\" \"vite\"",
+    "build": "tsc -p tsconfig.build.json && vite build",
     "preview": "vite preview"
   },
   "author": "eliav2",
