--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "emitDeclarationOnly": true,
     "declarationDir": "dist/types",
-//    "declarationMap": true,
+    "declarationMap": true,
     "noEmit": false
   },
   "include": [
