--- a/site/package.json
+++ b/site/package.json
@@ -17,7 +17,11 @@
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.20",
     "@docusaurus/preset-classic": "2.0.0-beta.20",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mdx-js/react": "^1.6.22",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.8.1",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.1",
     "raw-loader": "^4.0.2",
@@ -29,6 +33,10 @@
     "@docusaurus/module-type-aliases": "2.0.0-beta.20",
     "@tsconfig/docusaurus": "^1.0.5",
     "docusaurus": "^1.14.7",
+    "re-resizable": "^6.9.9",
+    "react-draggable": "^4.4.5",
+    "react-resizable": "^3.0.4",
+    "react-rnd": "^10.3.7",
     "typescript": "^4.6.4"
   },
   "browserslist": {
