--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dist"
   ],
   "devDependencies": {
-    "react-draggable": "^4.4.5"
+    "react-draggable": "^4.4.5",
+    "typedoc": "^0.22.17"
   }
 }
