--- a/site/package.json
+++ b/site/package.json
@@ -38,6 +38,7 @@
     "react-draggable": "^4.4.5",
     "react-resizable": "^3.0.4",
     "react-rnd": "^10.3.7",
+    "typedoc": "^0.22.17",
     "typescript": "^4.6.4"
   },
   "browserslist": {
