--- a/site/package.json
+++ b/site/package.json
@@ -34,7 +34,14 @@
     "@docusaurus/module-type-aliases": "2.0.0-beta.20",
     "@tsconfig/docusaurus": "^1.0.5",
     "docusaurus": "^1.14.7",
+    "docusaurus-plugin-react-docgen-typescript": "^0.1.0",
+    "docz": "^2.4.0",
+    "html-loader": "^3.1.0",
+    "my-loaders": "file:plugins/my-loaders",
     "re-resizable": "^6.9.9",
+    "react-docgen": "^5.4.1",
+    "react-docgen-props-table": "^1.0.3",
+    "react-docgen-typescript": "^2.2.2",
     "react-draggable": "^4.4.5",
     "react-resizable": "^3.0.4",
     "react-rnd": "^10.3.7",
