--- a/site/package.json
+++ b/site/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "docusaurus start --no-open",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "typedoc": "typedoc"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.20",
@@ -34,6 +35,7 @@
     "@docusaurus/module-type-aliases": "2.0.0-beta.20",
     "@tsconfig/docusaurus": "^1.0.5",
     "docusaurus": "^1.14.7",
+    "docusaurus-plugin-react-docgen": "^0.0.2",
     "docusaurus-plugin-react-docgen-typescript": "^0.1.0",
     "docz": "^2.4.0",
     "html-loader": "^3.1.0",
