--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -15,8 +15,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "noImplicitAny": false,
-    "declaration": true,
-    "declarationDir": "dist/types",
+    "noEmit": true
   },
   "include": ["src"],
   "exclude": ["node_modules"],
