--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "typings": "dist/types",
   "scripts": {
     "prepublishOnly": "pnpm run build",
-    "dev": "concurrently \"tsc -p tsconfig.dev.json -w\" \"vite build --config ./vite.config.watch.ts\" \"vite\"",
-    "build": "tsc -p tsconfig.build.json && vite build",
+    "dev": "concurrently \"tsc -p tsconfig.dev.json -w\" \"vite build --config ./vite.config.watch.ts\"",
+    "build": "tsc -p tsconfig.dev.json && vite build && tsc -p tsconfig.build.json",
     "preview": "vite preview"
   },
   "author": "eliav2",
   "license": "ISC",
   "dependencies": {
-    "react-fast-compare": "^3.2.0"
+    "react-fast-compare": "^3.2.0",
+    "typescript": "^4.7.3"
   },
   "peerDependencies": {
     "react": "^16.8.0  || >=17.0.0 || >=18.0.0",
@@ -26,6 +27,10 @@
   "devDependencies": {
     "react-docgen": "^5.4.1",
     "react-draggable": "^4.4.5",
-    "typedoc": "^0.22.17"
+    "typedoc": "^0.22.17",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite": "^2.9.9"
   }
 }
