--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "noEmit": true,
+    // using rollup to bundle the source code, so we're only using tsc to emit the declarations
+    "emitDeclarationOnly": true
   },
 }
