--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "typings": "dist/types",
   "scripts": {
     "prepublishOnly": "pnpm run build",
-    "dev": "concurrently \"tsc -p tsconfig.dev.json -w\" \"vite build --config ./vite.config.watch.ts\"",
-    "build": "tsc -p tsconfig.dev.json && vite build && tsc -p tsconfig.build.json",
+    "dev": "concurrently \"tsc --build -w\" \"vite build --config ./vite.config.watch.ts\"",
+    "build": "tsc -p tsconfig.check.json && vite build && tsc",
     "preview": "vite preview"
   },
   "author": "eliav2",
   "license": "ISC",
   "dependencies": {
+    "@rollup/plugin-typescript": "^8.3.3",
     "react-fast-compare": "^3.2.0",
     "typescript": "^4.7.3"
   },
@@ -25,12 +26,13 @@
     "dist"
   ],
   "devDependencies": {
-    "react-docgen": "^5.4.1",
-    "react-draggable": "^4.4.5",
-    "typedoc": "^0.22.17",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "lodash": "^4.17.21",
+    "react-docgen": "^5.4.1",
+    "react-draggable": "^4.4.5",
+    "typedoc": "^0.22.17",
     "vite": "^2.9.9"
   }
 }
