--- a/site/package.json
+++ b/site/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start --no-open",
-    "build": "docusaurus build --out-dir ../docs",
+    "build": "docusaurus build && typedoc",
     "swizzle": "docusaurus swizzle",
     "deploy": "set GIT_USER=eliva2&&docusaurus deploy",
     "clear": "docusaurus clear",
