--- a/site/package.json
+++ b/site/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start --no-open --port=3005",
+    "start": "docusaurus start --no-open --port=3005 --host 0.0.0.0",
     "build": "docusaurus build && typedoc",
     "swizzle": "docusaurus swizzle",
     "deploy": "set GIT_USER=eliva2&&docusaurus deploy",
