--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prepublishOnly": "pnpm run build",
     "dev": "concurrently \"tsc -w\" \"vite build --config ./vite.config.watch.ts\"",
-    "build": "tsc -p tsconfig.check.json && vite build && tsc",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "author": "eliav2",
