--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@rollup/plugin-typescript": "^8.3.3",
-    "react-fast-compare": "^3.2.0",
-    "typescript": "^4.7.3"
+    "react-fast-compare": "^3.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.0  || >=17.0.0 || >=18.0.0",
